Add concurrency feature to FunctionRouterExecutorFactory and pressure tests
- Apply PR #2325 changes: add `concurrency` field to `FunctionRouterProperties`
  with getter/setter, and update equals/hashCode/toString accordingly
- Update `FunctionRouterExecutorFactory` to use `ThreadPoolExecutor` with
  `LinkedBlockingQueue(1)` and a back-pressure `RejectedExecutionHandler`,
  replacing the single-threaded executor
- Wire concurrency config into the factory bean in `FunctionRouterConfiguration`
- Fix assertThat argument order in `FunctionRouterBindingConfigurationIT`
- Add `FunctionRouterExecutorFactoryTest` unit tests from PR #2325
- Add `FunctionRouterConcurrencyPressureTest` with 4 parameterized test scenarios
  covering concurrency levels 2, 5, and 10:
  1. Thread-count verification (exactly N distinct threads used)
  2. Parallel throughput (elapsed time bounded by theoretical parallel minimum)
  3. Registration pool isolation (no thread shared across registration keys)
  4. Large-volume stability (100/200/500 tasks complete without errors)